<resources>
    <string name="app_name">FurnitureStore</string>

    <string name="skip">Skip</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="or">Or</string>
    <string name="SignUP">Sign Up</string>
    <string name="google">Sign Up With Google</string>
    <string name="action_settings">Setting</string>
    <string name="LogIn">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgetPass">Forget Password?</string>
    <string name="back">Back</string>
    <string name="RestPass">Reset Password</string>
    <string name="Reset">Reset</string>
    <string name="AddNewProduct">Add New Product</string>
    <string name="NameProduct">Product Name</string>
    <string name="PriceProductDolar">Product Price In Dollar</string>
    <string name="PriceProductRial">Product Price In Rial</string>
    <string name="Quantity">Quantity</string>
    <string name="selectImage">Select Image</string>
    <string name="Add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Home">home</string>
    <string name="Category">category</string>
    <string name="Cart">cart</string>
    <string name="Purchases">purchases</string>
    <string name="Profile">profile</string>
    <string name="my_account">My Account</string>
    <string name="MyAccount">My Account</string>
    <string name="log_out">log Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="Delivery_Addresses">Delivery_Addresses</string>
    <string name="my_Balance">My Balance</string>
    <string name="my_products">My Products</string>
    <string name="go_back">Back</string>
    <string name="add_category">Add Category</string>
    <string name="update_category">Update Category</string>
    <string name="productDetails">Product Details</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="newPassword">New Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="changePassword">Change Password</string>


</resources>