<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layoutback_ground"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="-47dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="30dp"
            android:text="@string/RestPass"

            android:textColor="#000"
            android:textSize="15sp" />


        <EditText

            android:id="@+id/emailReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="170dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_outline_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            android:padding="10dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:textColorHint="#000">


        </EditText>




        <Button

            android:id="@+id/Reset_button"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="45dp"

            android:layout_marginTop="290dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/Reset"

            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:background="@drawable/button_shap"
            android:enabled="true"/>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>