<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText

            android:id="@+id/NewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="20dp"

            android:drawablePadding="10dp"
            android:hint="@string/newPassword"
            android:inputType="textPassword"

            android:padding="10dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:textColorHint="#000">


        </EditText>
        <EditText

            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="20dp"

            android:drawablePadding="10dp"
            android:hint="@string/confirm"
            android:inputType="textPassword"

            android:padding="10dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:textColorHint="#000">


        </EditText>


        <Button

            android:id="@+id/changePass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="40dp"

            android:background="@drawable/button_shap"
            android:clickable="true"
            android:enabled="true"
            android:focusable="false"

            android:focusableInTouchMode="false"
            android:text="@string/changePassword"
            android:textAllCaps="false"

            android:textColor="#fff"
            android:textSize="15sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>